HelloUltraviolet/Fixtures/RejectedSource/Expressions/OperatorOperandMismatch/Expected.uv
//! Expected diagnostic metadata for the OperatorOperandMismatch rejected-source specimen.

expectedDiagnostic("E-SEM-2525", "diag.16.OperatorExpressions")
